--- a/01-building-and-using-a-component/src/index.css
+++ b/01-building-and-using-a-component/src/index.css
@@ -31,6 +31,13 @@ h1 {
   margin-bottom: 2.5rem;
 }
 
+h2 {
+  letter-spacing: 0.15rem;
+  font-family: "Lato", sans-serif;
+  text-transform: uppercase;
+  margin-bottom: 2.5rem;
+}
+
 code {
   font-size: 1rem;
   background-color: #2f0c51;
