--- a/01-building-and-using-a-component/src/index.css
+++ b/01-building-and-using-a-component/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Lato:wght@400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 
 * {
   box-sizing: border-box;
@@ -6,7 +6,7 @@
 
 body {
   margin: 0;
-  font-family: "Raleway", sans-serif;
+  font-family: "Oswald", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: linear-gradient(#180d27, #0c0219);
@@ -25,16 +25,15 @@ body {
 }
 
 h1 {
-  letter-spacing: 0.15rem;
-  font-family: "Lato", sans-serif;
+  letter-spacing: 0.1rem;
+  font-family: "Oswald", sans-serif;
   text-transform: uppercase;
-  margin-bottom: 2.5rem;
+  margin-bottom: 2rem;
 }
 
-h2 {
-  letter-spacing: 0.15rem;
-  font-family: "Lato", sans-serif;
-  text-transform: uppercase;
+p {
+  letter-spacing: 0.03rem;
+  font-family: "Oswald", sans-serif;
   margin-bottom: 2.5rem;
 }
 
@@ -46,6 +45,7 @@ code {
 }
 
 .logo {
-  width: 50px;
-  height: 50px;
+  width: 70px;
+  height: 70px;
+  margin-top: 2.5rem;
 }
