--- a/02-using-props/src/index.css
+++ b/02-using-props/src/index.css
@@ -28,6 +28,7 @@ main {
   border-radius: 6px;
   background-color: #490000;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.4);
+  margin-bottom: 2rem;
 }
 
 main h2 {
@@ -60,4 +61,45 @@ main h2 {
 
 #countries li p {
   font-size: 1rem;
+}
+
+#info {
+  padding: 3rem;
+  border-radius: 6px;
+  background-color: #490000;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.4);
+}
+
+#info h2 {
+  text-align: left;
+}
+
+#info menu {
+  margin: 1rem 0;
+  padding: 0;
+  display: flex;
+  gap: 0.5rem;
+  list-style: none;
+}
+
+#info menu button {
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 6px;
+  background-color: #650303;
+  color: #f7e6e6;
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+#info menu button:hover {
+  background-color: #370202;
+  color: #f7e6e6;
+}
+
+#info menu button.active {
+  background-color: #370202;
+  color: #f7e6e6;
 }
