--- a/08-investment-calculator/src/index.css
+++ b/08-investment-calculator/src/index.css
@@ -37,6 +37,7 @@ body {
   margin: 2rem auto;
   border-radius: 4px;
   background: linear-gradient(180deg, #307e6c, #2b996d);
+  list-style: none;
 }
 
 .input-group {
