--- a/08-investment-calculator/src/index.css
+++ b/08-investment-calculator/src/index.css
@@ -44,13 +44,14 @@ body {
   display: flex;
   justify-content: space-evenly;
   gap: 1.5rem;
+  margin-bottom: 1rem;
 }
 
 #user-input label {
   display: block;
   margin-bottom: 0.25rem;
   font-family: 'Roboto Condensed', sans-serif;
-  font-size: 0.5rem;
+  font-size: 0.75rem;
   font-weight: bold;
   text-transform: uppercase;
 }
